Adjust landing page spacing and misc fixes.

--- a/scss/components/_grid-toc.scss
+++ b/scss/components/_grid-toc.scss
@@ -39,9 +39,9 @@
     text-decoration: none;
     &--all {
       color: $color-grey;
-      svg {
-        width: 16px;
-        height: 16px;
+      img {
+        width: 13px;
+        height: 17px;
         margin-left: 10px;
       }
     }
